<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2015 Red Hat, Inc. and/or its affiliates.
  ~  
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~  
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~  
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.jboss.integration-platform</groupId>
    <artifactId>jboss-integration-platform-parent</artifactId>
    <version>6.0.0.CR31</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.roger600.uberfire.testapp</groupId>
  <artifactId>uberfire-test-app</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Uberfire Test App</name>

  <properties>
    
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    
    <!-- Make OSGi happy -->
    <osgi.snapshot.qualifier>${maven.build.timestamp}</osgi.snapshot.qualifier>
    
    <version.org.jboss.integration-platform>6.0.0.CR31</version.org.jboss.integration-platform>
    <version.org.uberfire>0.8.0-SNAPSHOT</version.org.uberfire>
    <version.org.jboss.errai>3.2.2-SNAPSHOT</version.org.jboss.errai>
    <version.org.jboss.errai.cdi10-compatible>3.0.6.Final</version.org.jboss.errai.cdi10-compatible>
    <version.org.jboss.xnio>3.2.0.Final</version.org.jboss.xnio>
    <version.com.ahomeit.lienzo.core>2.0.192-RC1</version.com.ahomeit.lienzo.core>
    <version.com.ahomeit.lienzo.charts>1.0.122-RC0</version.com.ahomeit.lienzo.charts>
    <version.com.allen-sauer.gwt.dnd>3.3.3</version.com.allen-sauer.gwt.dnd>
    <version.com.google.gwt>2.7.0</version.com.google.gwt>
    <version.org.gwtbootstrap3>0.9.1</version.org.gwtbootstrap3>
    <version.org.owasp.encoder>1.1</version.org.owasp.encoder>
    <version.com.googlecode.jsonsimple>1.1.1</version.com.googlecode.jsonsimple>
    <version.com.googlecode.jtype>0.1.1</version.com.googlecode.jtype>
    <version.de.benediktmeurer.gwt-slf4j>0.0.2</version.de.benediktmeurer.gwt-slf4j>
    
  </properties>

  <modules>
    <module>uberfire-test-app-core</module>
    <module>uberfire-test-app-model</module>
    <module>uberfire-test-app-webapp</module>
  </modules>
  
  <!-- Repositories -->
  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    
    <dependencies>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-api</artifactId>
        <version>${project.version}</version>
        <classifier>sources</classifier>
      </dependency>


      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-processors</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-processors</artifactId>
        <version>${project.version}</version>
        <classifier>sources</classifier>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-backend</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-backend</artifactId>
        <version>${project.version}</version>
        <classifier>sources</classifier>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-client</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-core-client</artifactId>
        <version>${project.version}</version>
        <classifier>sources</classifier>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-model-api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.roger600.uberfire.testapp</groupId>
        <artifactId>uberfire-test-app-model-api</artifactId>
        <version>${project.version}</version>
        <classifier>sources</classifier>
      </dependency>
      
      
      <!-- Integration Platform -->
      <dependency>
        <groupId>org.jboss.integration-platform</groupId>
        <artifactId>jboss-integration-platform-bom</artifactId>
        <type>pom</type>
        <version>${version.org.jboss.integration-platform}</version>
        <scope>import</scope>
      </dependency>

      <!-- UberFire -->
      <dependency>
        <groupId>org.uberfire</groupId>
        <artifactId>uberfire-bom</artifactId>
        <type>pom</type>
        <version>${version.org.uberfire}</version>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.uberfire</groupId>
        <artifactId>uberfire-extensions-bom</artifactId>
        <type>pom</type>
        <version>${version.org.uberfire}</version>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.jboss.errai.bom</groupId>
        <artifactId>errai-internal-bom</artifactId>
        <type>pom</type>
        <version>${version.org.jboss.errai}</version>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.owasp.encoder</groupId>
        <artifactId>encoder</artifactId>
        <version>${version.org.owasp.encoder}</version>
      </dependency>

      <!-- Override needed by Errai Embedded WildFly -->
      <dependency>
        <groupId>org.jboss.xnio</groupId>
        <artifactId>xnio-api</artifactId>
        <version>${version.org.jboss.xnio}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.xnio</groupId>
        <artifactId>xnio-nio</artifactId>
        <version>${version.org.jboss.xnio}</version>
      </dependency>

      <dependency>
        <groupId>com.allen-sauer.gwt.dnd</groupId>
        <artifactId>gwt-dnd</artifactId>
        <version>${version.com.allen-sauer.gwt.dnd}</version>
      </dependency>

      <!-- temporary, should be moved to jboss-ip-bom -->
      <dependency>
        <groupId>org.gwtbootstrap3</groupId>
        <artifactId>gwtbootstrap3</artifactId>
        <version>${version.org.gwtbootstrap3}</version>
      </dependency>

      <dependency>
        <groupId>org.gwtbootstrap3</groupId>
        <artifactId>gwtbootstrap3-extras</artifactId>
        <version>${version.org.gwtbootstrap3}</version>
      </dependency>

      <!-- GWT dev  -->
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt-dev</artifactId>
        <version>${version.com.google.gwt}</version>
      </dependency>

      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt-user</artifactId>
        <version>${version.com.google.gwt}</version>
      </dependency>

      <dependency>
        <groupId>de.benediktmeurer.gwt-slf4j</groupId>
        <artifactId>gwt-slf4j</artifactId>
        <version>${version.de.benediktmeurer.gwt-slf4j}</version>
      </dependency>

      <!-- JSON parsing. -->
      <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>${version.com.googlecode.jsonsimple}</version>
        <type>jar</type>
      </dependency>

      <!-- Lienzo. -->
      <dependency>
        <groupId>com.ahome-it</groupId>
        <artifactId>lienzo-core</artifactId>
        <version>${version.com.ahomeit.lienzo.core}</version>
      </dependency>

      <dependency>
        <groupId>com.ahome-it</groupId>
        <artifactId>lienzo-charts</artifactId>
        <version>${version.com.ahomeit.lienzo.charts}</version>
      </dependency>

    </dependencies>

  </dependencyManagement>

  <!-- DistributionManagement is already defined in jboss-parent-->
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <fork>true</fork>
            <meminitial>128m</meminitial>
            <maxmem>512m</maxmem>
            <showDeprecation>true</showDeprecation>
            <showWarnings>true</showWarnings>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <excludes>
              <exclude>**/*IntegrationTest.java</exclude>
            </excludes>
            <argLine>-Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
            <systemProperties>
              <property>
                <name>apple.awt.UIElement</name>
                <value>true</value>
              </property>
            </systemProperties>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <includes>
              <include>**/*IntegrationTest.java</include>
            </includes>
            <argLine>-Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
          </configuration>
        </plugin>

        <!-- Packaging -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <executions>
            <!-- No OSGi manifestEntries for <goal>jar</goal>: if it supported, then felix has already added them -->
            <execution>
              <id>attach-test-jar</id>
              <goals>
                <goal>test-jar</goal>
              </goals>
              <configuration>
                <excludes>
                  <exclude>**/logback-test.xml</exclude>
                  <exclude>**/jndi.properties</exclude>
                </excludes>
                <archive>
                  <manifestEntries>
                    <Bundle-SymbolicName>${project.artifactId}.tests</Bundle-SymbolicName>
                    <Bundle-Version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.snapshot.qualifier}</Bundle-Version>
                    <Bundle-Name>${project.name}</Bundle-Name>
                    <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
                  </manifestEntries>
                </archive>
              </configuration>
            </execution>
          </executions>
          <configuration>
            <archive>
              <manifest>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
            </archive>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
              <configuration>
                <archive>
                  <manifestEntries>
                    <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                    <Bundle-SymbolicName>${project.artifactId}.source</Bundle-SymbolicName>
                    <Bundle-Version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.snapshot.qualifier}</Bundle-Version>
                    <Bundle-Name>${project.name}</Bundle-Name>
                    <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
                    <Eclipse-SourceBundle>${project.artifactId};version="${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.snapshot.qualifier}";roots:="."</Eclipse-SourceBundle>
                  </manifestEntries>
                </archive>
              </configuration>
            </execution>
            <execution>
              <id>attach-test-sources</id>
              <goals>
                <goal>test-jar-no-fork</goal>
              </goals>
              <configuration>
                <archive>
                  <manifestEntries>
                    <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                    <Bundle-SymbolicName>${project.artifactId}.tests.source</Bundle-SymbolicName>
                    <Bundle-Version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.snapshot.qualifier}</Bundle-Version>
                    <Bundle-Name>${project.name}</Bundle-Name>
                    <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
                    <Eclipse-SourceBundle>${project.artifactId}.tests;version="${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.snapshot.qualifier}";roots:="."</Eclipse-SourceBundle>
                  </manifestEntries>
                </archive>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <!--Fix translations from Zanata -->
        <plugin>
          <groupId>com.google.code.maven-replacer-plugin</groupId>
          <artifactId>replacer</artifactId>
          <version>1.5.2</version>
          <configuration>
            <includes>
              <include>**/*Constants_de.properties</include>
              <include>**/*Constants_es.properties</include>
              <include>**/*Constants_fr.properties</include>
              <include>**/*Constants_ja.properties</include>
              <include>**/*Constants_pt_BR.properties</include>
              <include>**/*Constants_zh_CN.properties</include>
              <include>**/*Constants_ru.properties</include>
            </includes>
            <excludes>
              <exclude>**/ErraiApp.properties</exclude>
            </excludes>
            <replacements>
              <replacement>
                <token>''</token>
                <value>'</value>
              </replacement>
              <replacement>
                <token>'</token>
                <value>''</value>
              </replacement>
            </replacements>
          </configuration>
        </plugin>

        <!-- Zanata -->
        <plugin>
          <groupId>org.zanata</groupId>
          <artifactId>zanata-maven-plugin</artifactId>
          <version>2.3.0</version>
          <configuration>
            <excludes>**/ErraiApp.properties</excludes>
            <projectConfig>${session.executionRootDirectory}/src/main/config/zanata.xml</projectConfig>
            <srcDir>src/main/resources/</srcDir>
            <transDir>src/main/resources/</transDir>
            <includes>**/*Constants.properties</includes>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <links>
              <link>http://docs.oracle.com/javase/6/docs/api</link>
            </links>
            <minmemory>128m</minmemory>
            <maxmemory>512m</maxmemory>
            <author>false</author>
            <breakiterator>true</breakiterator>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>1.3</version>
        </plugin>

      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>

      <plugin>
        <!-- Entry needed to provide parsed version properties -->
        <!-- Additionally it adds allows generated sources goes into -sources artifact -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>target/generated-sources/annotations/</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <!-- Entry needed to create test-jars even for packaging types war, bundle, ... -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
      </plugin>

      <plugin>
        <!-- Entry needed to create, install and deploy sources jars -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>

